--- a/blocks/about.css
+++ b/blocks/about.css
@@ -1,12 +1,12 @@
 @keyframes pulsate {
-  from {
+  0% {
     opacity: 0;
-  }
-  to {
-    transform: scale(1.3);
   }
   50% {
     opacity: 0.6;
+  }
+  100% {
+    transform: scale(1.3);
   }
 }
 
