--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -7,8 +7,11 @@
 }
 
 .menu__title {
+  max-width: 780px;
+  margin-right: auto;
+  margin-left: auto;
   text-align: center;
-  margin: 0 0 24px;
+  margin-bottom: 24px;
   font-style: normal;
   font-weight: 500;
   font-size: 44px;
@@ -16,13 +19,17 @@
 }
 
 .menu__subtitle {
+  max-width: 780px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 100px;
   text-align: center;
-  margin: 0 0 100px;
   font-family: "Noto Serif", "Times New Roman", serif;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
   line-height: 30px;
+  max-width: 780px;
 }
 
 .menu__cards {
