--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -8,6 +8,7 @@
 
 .menu__title {
   max-width: 780px;
+  margin-top: 0;
   margin-right: auto;
   margin-left: auto;
   text-align: center;
@@ -23,13 +24,13 @@
   margin-right: auto;
   margin-left: auto;
   margin-bottom: 100px;
+  margin-top: 0;
   text-align: center;
   font-family: "Noto Serif", "Times New Roman", serif;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
   line-height: 30px;
-  max-width: 780px;
 }
 
 .menu__cards {
